changed score layout for mobile to fix `squishing` problem

--- a/css/style.css
+++ b/css/style.css
@@ -77,17 +77,24 @@ h3 {
 
 .score-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin-top: 10px;
   margin-bottom: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
+@media screen and (min-width: 650px) {
+    .score-container {
+        flex-direction: row;
+        justify-content: center;
+    }
+  }
+
 h4 {
   height: auto;
-  width: 45%;
+  width: 60%;
   font-size: 24px;
   display: flex;
   flex-flow: nowrap;
